Kubernetes deployment.